v2.8.1/yii2/yii2_galaxy_llm.md
# ARCHITECTURAL_BRIEF: yii2
> INSTRUCTION: Deterministic Syntactic Analysis. Base architectural insights on Structural Magnitude, Extracted Signatures, and Risk overlays.

## 0. FORENSIC TRACEABILITY
| Metadata | Value |
|---|---|
| **Engine** | `GitGalaxy Scope vlatest (Delta Mode)` |
| **Git Remote** | `https://github.com/yiisoft/yii2.git` |
| **Zero-Dependency Mode** | `Inactive (Full Precision)` |

## 0.5 AI THREAT AUDIT STATUS
> **✅ SECURE_NO_THREATS_DETECTED**
> XGBoost Structural Signatures model found no malicious artifacts.

## 1. SYSTEM ROLE & PHILOSOPHY
> You are a Senior Technical Storyteller and Codebase Architect. GitGalaxy has translated the non-visual architecture of this repository into measurable Structural Signatures (regex-derived counts, not an AST or compiler pass). Your job is to weave those signatures into a coherent, factual narrative about how this system is built -- its architecture, design patterns, and complexity -- not to render a verdict.
> 
> **CORE DIRECTIVES:**
> 1. **Narrate the Architecture, Don't Judge the Author:** Frame every observation as a blameless description of the system's physical reality. A high Structural Surface Profile reading (formerly called Risk Exposure; e.g., Complexity Load, formerly Cognitive Load Exposure) describes where the architecture may be drifting into fragile territory, not developer incompetence -- it is a prompt to investigate, never a verdict. These are activity/content surface meters, not defect-probability estimates (gitgalaxy#2991, evidence in #2982) -- describe what is there, don't imply it predicts a bug.
> 2. **The Physical Reality Rule:** Base your narrative strictly on the provided Structural Signatures and the numbers derived from them. Do not hallucinate meaning, and do not restate a heuristic's raw label (e.g. a 'Logic Bomb' or 'O(2^N)' flag) as a confirmed finding of malice or a guaranteed defect -- explain what the signature actually measures, weave it into the story of the file, and let the reader draw their own conclusion.
> 3. **Risk vs. Defense:** Code is a balance. A file with high `flux` (state mutation) is risky unless balanced by `freeze_hits` (immutability). High `danger` is brittle unless wrapped in `safety`. Tell that balance as part of the narrative, not as an isolated alarm.
> 
> **THE STRUCTURAL SIGNATURE LEXICON:**
> * **Structure & Mass:** `branch` (splits), `linear` (paths), `args` (coupling), `func_start` (entry points).
> * **Risk & Volatility:** `danger` (dynamic execution), `flux` (state mutation), `graveyard` (commented-out logic), `safety_neg` (security bypasses).
> * **Architecture & Domain:** `io` (network latency), `concurrency` (async orchestration), `api` (public surface), `import` (dependencies).
> * **Defensive Guardrails:** `safety` (Error handling), `freeze_hits` (immutability), `cleanup` (state destruction).
## 2. THE 13-POINT STRUCTURAL SURFACE PROFILE (formerly Risk Exposure) ANALYSIS (EQUATIONS & CONTEXT)
> **How the SAST Engine Calculates the Structural Surface Profile (Lower 0 - Higher Surface Presence 100%):**
> Most scores use a Sigmoid curve based on density (Hits / LOC) to prevent massive files from mathematically hiding their flaws. These 13 vectors are activity/content surface meters -- they describe what is present in a file, not the probability of a defect. The temporal-crucible validation record (gitgalaxy#2982, ~3,550 scanned snapshots, two repositories, pre-registered) tested the per-file-standing-risk claim to exhaustion and found it does not hold; see docs/vectors.md for the full record and gitgalaxy#2991 for the rename this drove. `risk_*` names remain the underlying column/key names for schema compatibility -- see the 'formerly' aliases below.
> 
> 1. **Complexity Load** (formerly Cognitive Load Exposure)**:** Measures the mental effort required for a developer to read and understand the file. `Density(Branches + (Flux * 2) + Async/Danger)` mitigated by `Doc Coverage`.
> 2. **Guard Balance** (formerly Error & Exception Risk Exposure)**:** Measures structural integrity and resilience against runtime errors. `Net Exposure = (Danger + Safety_Neg + Flux) - (Safety + Tests + Docs)`.
> 3. **Debt Markers** (formerly Tech Debt Exposure)**:** Measures the density of developer-annotated structural stress. `Density(TODOs [1x] + FIXMEs/Hacks [3x] + Empty Stubs [0.5x])`.
> 4. **Test Surface** (formerly Verification Risk Exposure)**:** Evaluates test coverage by comparing a function's structural complexity against the scope of the tests validating it.
> 5. **Connectivity** (formerly API Risk Exposure)**:** Measures the public surface area of a module. `Ratio(API Hits / Total Functions & Classes)`.
> 6. **Concurrency Surface** (formerly Concurrency Risk Exposure)**:** Measures the density of asynchronous operations, threading, and parallel execution logic.
> 7. **Mutation Surface** (formerly State Flux Risk Exposure)**:** Measures the frequency of data mutation and variable reassignment.
> 8. **Dead Code Surface** (formerly Commented Logic (dead code))**:** Measures the presence of abandoned, commented-out logic blocks.
> 9. **Spec Alignment** (formerly Spec Match Risk Exposure)**:** Measures how closely code aligns with formal specifications or architectural requirements.
> 10. **Historical Stability** (formerly Stability; predictive layer, promotion pending #2987)**:** Measures the recency of edits relative to the repository's entire lifespan. Part of the family the validation record actually supports as predictive -- currently ablated to zero in every scan (`GITGALAXY_DISABLE_GIT_HISTORY`, temporal-crucible#29).
> 11. **Historical Churn** (formerly Deep Churn; predictive layer, promotion pending #2987)**:** Measures the historical volatility and frequency of modification. Same predictive-layer status and ablation caveat as Historical Stability above.
> 12. **Documentation Surface** (formerly Documentation Risk Exposure)**:** Of the units extracted from a file, the weight-share a reader cannot recover from documentation -- public units count double, runtime-dynamic units count more, and a folder-level documentation umbrella shields the whole file. A ratio over units, not a density over lines; files with no extracted units have no value.
> 13. **Indentation Consistency:** Measures formatting alignment (Tabs vs. Spaces). Provided for codebase standardization context, not a functional risk.
> 
> **--- THE SECURITY & VULNERABILITY LENS ---**
> 14. **Obfuscation & Evasion Risk:** Measures the density of obfuscated logic, packed strings, and non-standard encoding.
> 15. **Logic Bomb / Sabotage Risk:** Measures condition-heavy execution leading to destructive OS, memory, or process commands.
> 16. **Injection Surface Risk Exposure:** Measures external network/I/O input flowing directly into dynamic execution contexts (XSS, SQLi, RCE).
> 17. **Memory Corruption Risk Exposure:** Measures the density of raw pointer math and manual memory allocations (Buffer Overflows, UAF).
> 18. **Credential Material** (formerly Secrets Risk Exposure)**:** Measures the presence of hardcoded credentials exposed to logs or globals.
> 
> **--- STRUCTURAL MAGNITUDE (NOT RISK) ---**
> **19. Function Magnitude (Impact Score):** Measures the physical footprint and 'heaviness' of a specific function. `((BranchHits + 1) * (Args + 1) + (0.05 * LOC)) * 10`. This is NOT a risk score.
> **20. File Magnitude (Total Impact):** Measures the total structural impact of a file. `Sum(Function Impacts) + API + Concurrency + Flux + (LOC / 50)`. This is NOT a risk score.

## 3. MACRO STATE
| Metric | Value |
|---|---|
| Total Artifacts | 2426 |
| Analyzed Artifacts (Scanned) | 1021 |
| Excluded Artifacts (Unparsable data, binaries, unsupported formats) | 1405 |
| Total LOC | 122963 |
| Volatility Index | 0.006 |
| % Scanned of codebase = | 42.1% |
| Dominant Lang | PHP |

## 3.5 MACRO-NETWORK TOPOLOGY (Resilience & Coupling)
| Metric | Value | Interpretation |
|---|---|---|
| Modularity | 0.512 | High = Clean micro-boundaries. Low = Spaghetti coupling. |
| Assortativity | -0.1218 | Positive = Resilient core. Negative = Fragile single-points-of-failure. |
| Cyclic Density | 0.0% | % of files trapped in dependency loops (Static Friction). |
| Avg Path Length | 1.9406 | Mean import hops from a file to each file it transitively depends on. Higher = Longer dependency chains. |
| Articulation Pts | 76 | Number of single files that, if removed, shatter the network. |

## 4. COMPOSITION
| Lang | Files | LOC | Share |
|---|---|---|---|
| PHP | 950 | 114274 | 93.0% |
| SQLITE | 29 | 2456 | 2.8% |
| JAVASCRIPT | 11 | 5461 | 1.1% |
| MARKDOWN | 9 | 0 | 0.9% |
| YAML | 6 | 118 | 0.6% |
| PLAINTEXT | 4 | 0 | 0.4% |
| XML | 3 | 0 | 0.3% |
| HTML | 3 | 375 | 0.3% |
| JSON | 2 | 220 | 0.2% |
| DOCKERFILE | 1 | 7 | 0.1% |
| BATCH | 1 | 6 | 0.1% |
| CSS | 1 | 0 | 0.1% |
| SHELL | 1 | 46 | 0.1% |

## 4.5 REPOSITORY ECOSYSTEM BASELINE (GLOBAL ARCHITECTURE)
> **Assigned Ecosystem Baseline:** `Cluster 3`
> **Architectural Drift Z-Score:** `2.272`
> **Composition Archetype:** `Hub-Coupled Monorepo` (z +2.21; from the repo's file-archetype mix)
> **File Composition:** Interface Declarations Files 37%, Data / Markup / Trivial 16%, Large Core Modules 14%, Declarative / Non-Code 10%, Defensive Guards Files 6%
> **⚠️ UNIQUE INTERPRETATION:** This repository has a high Z-Score. While it maps closest to this archetype, its internal structure is a highly unique or hybrid interpretation of the pattern.

## 4.6 FILE ARCHETYPES & STATIC ASSETS
### Active Execution Logic (ML Clusters)
| Archetype | Count | Repo % |
|---|---|---|
| Unclassified | 1008 | 98.7% |

### Inert Structural Mass (Static Categories)
| Category | Count | Repo % |
|---|---|---|
| Static: Literature & Documentation | 13 | 1.3% |

## 5. EXCLUDED ARTIFACTS (Unparsable or Shielded Files)
*Total Excluded Artifacts: 1405*

**Composition by Extension & Reason:**
- `.md`: 857x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir), 1x Excluded (Lexical Monotony: High structural repetition detected in 3209 LOC)
- `.png`: 261x Excluded (Explicitly Denied Extension: '.png')
- `.php`: 53x Excluded (Machine-Generated Source Code Signature: 149 LOC), 35x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir), 1x Excluded (Machine-Generated Source Code Signature: 339 LOC)
- `.graphml`: 93x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.json`: 23x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `no_extension`: 17x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir), 2x Unsupported Format (.undeterminable)
- `.yml`: 16x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.xml`: 9x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.sql`: 5x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.neon`: 4x Excluded (Unsupported Extension: '.neon')
- `.vsd`: 3x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.xlsx`: 3x Excluded (Explicitly Denied Extension: '.xlsx')
- `.dist`: 2x Excluded (Unsupported Extension: '.dist')
- `.yaml`: 1x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.bat`: 1x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)

## 6. STRUCTURAL SURFACE PROFILE (formerly Risk Exposure) ANALYSIS (0-100%)
| Structural Surface Vector | Min | Max | Mean | Med | Mode |
|---|---|---|---|---|---|
| Complexity Load (formerly Cognitive Load Exposure) | 0.0 | 92.5 | 11.9 | 4.0 | 0.0 |
| Guard Balance (formerly Error & Exception Exposure) | 0.0 | 100.0 | 56.8 | 63.4 | 0.0 |
| Debt Markers (formerly Tech Debt Exposure) | 0.0 | 100.0 | 24.9 | 0.0 | 0.0 |
| Test Surface (formerly Testing Exposure) | 0.0 | 80.0 | 1.8 | 0.0 | 0.0 |
| Connectivity (formerly API Exposure) | 0.0 | 65.8 | 5.8 | 5.5 | 0.0 |
| Concurrency Surface (formerly Concurrency Exposure) | 0.0 | 98.8 | 0.3 | 0.0 | 0.0 |
| Mutation Surface (formerly State Flux Exposure) | 0.0 | 100.0 | 31.9 | 0.0 | 0.0 |
| Dead Code Surface (formerly Commented Logic Exposure) | 0.0 | 91.7 | 1.0 | 0.0 | 0.0 |
| Spec Alignment (formerly Specification Exposure) | 0.0 | 100.0 | 92.3 | 100.0 | 100.0 |
| Historical Stability (predictive layer, promotion pending #2987) (formerly Instability Exposure) | 0.0 | 5.0 | 0.8 | 0.0 | 0.0 |
| Historical Churn (predictive layer, promotion pending #2987) (formerly Volatility Exposure) | 0.0 | 100.0 | 9.5 | 0.0 | 0.0 |
| Doc Surface (formerly Documentation Exposure) | 0.0 | 100.0 | 23.8 | 0.0 | 0.0 |
| Credential Material (formerly Hardcoded Payload Artifacts) | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |

## 6b. SURFACE FAMILY PROFILE (Tier 1/2/3 -- gitgalaxy#2994)
> Percentile columns elsewhere in this brief that come from the Tier-2 snapshot percentiles are SNAPSHOT-RELATIVE: "87" means this file's value sits at the 87th percentile of THIS repo's files for that surface -- true by construction (Hazen average-rank), not a calibrated 0-100 risk threshold like the section 6 sigmoid scores above. An all-zero surface across the whole repo reads as 0.0 for every file, never a false-median 50.
| Family | Repo Total | Files w/ Signal | P90 File Value | Top File |
|---|---|---|---|---|
| memory | 4183 | 480 | 11 | `tests/framework/db/sqlite/SqlTokenizerTest.php` |
| cleanup | 485 | 118 | 1 | `tests/data/postgres.sql` |
| guards | 5342 | 619 | 15 | `framework/db/BaseActiveRecord.php` |
| danger | 2506 | 369 | 5 | `tests/framework/db/mssql/QueryBuilderTest.php` |
| concurrency | 121 | 24 | 0 | `framework/db/BaseActiveRecord.php` |
| connectivity | 7725 | 835 | 21 | `tests/framework/helpers/HtmlTest.php` |
| io | 545 | 113 | 1 | `tests/js/data/yii.html` |
| crypto | 0 | 0 | 0 | - |
| ipc | 43 | 23 | 0 | `framework/i18n/Formatter.php` |
| time | 273 | 60 | 0 | `tests/framework/i18n/FormatterDateTest.php` |
| serialization | 103 | 40 | 0 | `tests/framework/rest/SerializerTest.php` |
| regex | 281 | 91 | 0 | `framework/assets/yii.validation.js` |
| events | 253 | 23 | 0 | `tests/framework/base/EventTest.php` |
| tests | 8134 | 264 | 19 | `tests/framework/db/ActiveRecordTest.php` |
| docs | 8224 | 956 | 21 | `tests/framework/ar/ActiveRecordTestTrait.php` |
| debt | 694 | 159 | 1 | `tests/framework/validators/DateValidatorTest.php` |
| mutation | 22476 | 784 | 67 | `framework/helpers/BaseHtml.php` |
| dead_code | 5189 | 739 | 14 | `tests/framework/helpers/HtmlTest.php` |
| credential | 3 | 2 | 0 | `tests/js/tests/yii.validation.test.js` |
| threat | 245 | 116 | 1 | `framework/base/Component.php` |
| ml_ai | 67 | 15 | 0 | `tests/framework/db/mysql/connection/DeadLockTest.php` |
| ui | 995 | 122 | 1 | `tests/framework/db/CommandTest.php` |

**Relations (repo medians):**
- `guard_balance_ratio` (guards / (danger + 1)): **1.0**
- `alloc_cleanup_pairing` (cleanup / (memory + 1)): **0.0**

## 7. ARCHITECTURAL CHOKE POINTS & DEPENDENCIES
### Top I/O Latency Risks
- `tests/js/data/yii.html` (Hits: 71)
- `tests/framework/web/MultipartFormDataParserTest.php` (Hits: 40)
- `tests/framework/db/SchemaTest.php` (Hits: 23)

### Top 5 Structural Pillars (Highest 'Imported By' / Blast Radius)
These are the most interconnected files relative to the rest of this repository. On a repo with dense internal coupling, that means core load-bearing infrastructure -- changes carry real cascading-break risk. On a repo with a flatter internal architecture, the gap between #1 and #5 may be small, and this list is a weaker signal accordingly; compare the connection counts below before treating it as a verdict.

1. **Yii.php** (`framework/Yii.php`) — 244 inbound connections
2. **TestCase.php** (`tests/TestCase.php`) — 172 inbound connections
3. **InvalidConfigException.php** (`framework/base/InvalidConfigException.php`) — 112 inbound connections
4. **BaseObject.php** (`framework/base/BaseObject.php`) — 54 inbound connections
5. **Component.php** (`framework/base/Component.php`) — 53 inbound connections

### Top 5 Orchestrators (Highest 'Imports' / Fragility Index)
These files pull in the most external dependencies. They are highly coupled and fragile to API changes.

1. **UrlRuleTest.php** (`tests/framework/web/UrlRuleTest.php`) — 273 outbound dependencies
2. **messageConfig.php** (`framework/views/messageConfig.php`) — 95 outbound dependencies
3. **Formatter.php** (`framework/i18n/Formatter.php`) — 75 outbound dependencies
4. **config.php** (`framework/messages/config.php`) — 75 outbound dependencies
5. **YiiRequirementChecker.php** (`framework/requirements/YiiRequirementChecker.php`) — 61 outbound dependencies

## 8. CORE FUNCTION HITLIST (Heaviest Functions)
> *Note: The 'Impact' metric below represents Structural Magnitude (complexity, arguments, and length), NOT operational risk. These are the load-bearing pillars of the logic.*

- `email` **(Many-Argument Workhorses)** (@ `framework/assets/yii.validation.js`) -> Impact: **198.0** | LOC: 240
- `saveMessagesToDb` **(Many-Argument Workhorses)** (@ `framework/console/controllers/MessageController.php`) -> Impact: **106.0** | LOC: 141
- `parseToken` **(Many-Argument Workhorses)** (@ `framework/i18n/MessageFormatter.php`) -> Impact: **99.0** | LOC: 100
  * *Intent:* /** * Parses a token. * @param array $token the token to parse * @param array $args arguments to replace * @param string $locale the locale * @return ...
- `saveMessagesToPO` **(Many-Argument Workhorses)** (@ `framework/console/controllers/MessageController.php`) -> Impact: **77.7** | LOC: 84
- `createUrl` **(Many-Argument Workhorses)** (@ `framework/web/UrlRule.php`) -> Impact: **76.2** | LOC: 85
  * *Intent:* /** * Creates a URL according to the given route and parameters. * @param UrlManager $manager the URL manager * @param string $route the route. It sho...
- `resolveCallableDependencies` **(Defensive Guards)** (@ `framework/di/Container.php`) -> Impact: **71.7** | LOC: 83
  * *Intent:* /** * Resolve dependencies for a function. * * This method can be used to implement similar functionality as provided by [[invoke()]] in other * compo...
- `saveMessagesCategoryToPHP` **(Many-Argument Workhorses)** (@ `framework/console/controllers/MessageController.php`) -> Impact: **71.1** | LOC: 64
- `handleAction` **(Many-Argument Workhorses)** (@ `framework/assets/yii.js`) -> Impact: **69.0** | LOC: 132
  * *Intent:* * echo Html::a('submit', ['site/foobar'], [ * 'data' => [ * 'method' => 'post', * 'params' => [ * 'name1' => 'value1', * 'name2' => 'value2', * ], * ]...
- `extractMessagesFromTokens` **(Many-Argument Workhorses)** (@ `framework/console/controllers/MessageController.php`) -> Impact: **67.0** | LOC: 101
- `unlink` **(Many-Argument Workhorses)** (@ `framework/db/BaseActiveRecord.php`) -> Impact: **66.3** | LOC: 87
  * *Intent:* * The model with the foreign key of the relationship will be deleted if `$delete` is `true`. * Otherwise, the foreign key will be set `null` and the m...

*Function archetypes referenced above:*
  * **Defensive Guards**: validation and error handling (null checks, guards, early bailouts)
  * **Many-Argument Workhorses**: large, many-parameter procedural function doing heavy lifting

## 9. DIRECTORY GROUPS (Top 10 Heaviest Modules)
| Folder Path | Files | Total Impact | Avg Complexity Load | Avg Debt Markers |
|---|---|---|---|---|
| `framework/db` | 46 | 7116.91 | 16.7% | 44.5% |
| `framework/web` | 58 | 6939.29 | 17.42% | 63.36% |
| `framework/helpers` | 31 | 5959.98 | 14.6% | 35.64% |
| `framework/base` | 49 | 3828.86 | 14.45% | 51.12% |
| `tests/framework/db` | 22 | 3769.46 | 10.52% | 0.0% |
| `framework/console/controllers` | 8 | 3376.96 | 36.28% | 45.28% |
| `tests/framework/web` | 29 | 3254.96 | 9.08% | 0.0% |
| `framework/validators` | 24 | 2943.46 | 31.18% | 69.11% |
| `framework/i18n` | 12 | 2755.16 | 23.33% | 49.68% |
| `tests/framework/validators` | 20 | 2677.68 | 13.11% | 0.0% |

## 10. TARGETED STRUCTURAL SURFACE VECTORS (formerly Risk Vectors, Top 5 by Surface)
### Highest Debt Markers (formerly Tech Debt; Fragile/Planned)
- `framework/caching/ApcCache.php` -> **100.0%** Exposure
- `framework/caching/WinCache.php` -> **100.0%** Exposure
- `framework/db/DataReader.php` -> **99.9998%** Exposure
- `framework/db/Migration.php` -> **99.9998%** Exposure
- `framework/web/SessionHandler.php` -> **99.9996%** Exposure
### Highest Mutation Surface (formerly State Flux; Mutation/Volatility)
- `framework/assets/yii.validation.js` -> **100.0%** Exposure
- `framework/base/ActionFilter.php` -> **100.0%** Exposure
- `framework/base/ArrayableTrait.php` -> **100.0%** Exposure
- `framework/base/Controller.php` -> **100.0%** Exposure
- `framework/base/DynamicModel.php` -> **100.0%** Exposure
### Highest Design Slop (Dead & Duplicated Logic)
- `tests/framework/helpers/HtmlTest.php` -> **108** Orphaned Functions | **0** Duplicates
- `tests/framework/db/ActiveRecordTest.php` -> **83** Orphaned Functions | **2** Duplicates
- `tests/framework/helpers/ArrayHelperTest.php` -> **67** Orphaned Functions | **0** Duplicates
- `tests/framework/base/SecurityTest.php` -> **64** Orphaned Functions | **0** Duplicates
- `tests/framework/db/CommandTest.php` -> **51** Orphaned Functions | **0** Duplicates

## 10.5 AI THREAT INTELLIGENCE (XGBoost)
*No files met the threshold for malicious structural signatures.*

## 10.6 WEAPONIZABLE SURFACE EXPOSURES (RULE-BASED SAST)
> Secondary Evidence: The following files tripped specific static threat signatures. Use these to explain *why* the XGBoost model flagged the files above.

*No critical vulnerabilities or security lens thresholds breached.*

## 10.7 ECOSYSTEM SECURITY AUDITS
> **AI CONTEXT:** High-level perimeter defense metrics from the X-Ray, Supply Chain Firewall, and API Network Mapper.

### ☢️ X-Ray & 🧱 Supply Chain Firewall
- **Binary Anomalies (X-Ray):** `2` (High entropy, packed payloads, or magic byte mismatches).
- **Blacklisted Dependencies:** `0` explicitly banned packages imported.
- **Unknown Dependencies:** `4470` packages imported that bypass the Zero-Trust whitelist.

## 11. CUMULATIVE RISK HITLIST (Top 10 Highest Risk Files)
> Cumulative Risk is the sum of all individual risk exposures. These files represent the highest multi-dimensional technical debt and architectural fragility.

### 1. `framework/console/controllers/MessageController.php` (PHP) -> Cumulative Risk: **587.89**
- **Archetype:** `file_cluster_11` (Distance: N/A IQR)
- **Composition Archetype:** `Large Core Modules` (z -0.01)
- **Magnitude:** 895.54 | **LOC:** 1028 | **CtrlFlow:** 26.5% | **Authorship Centralization:** 66.7%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (97.0767%), Verification (80.0%)
- **Heaviest Functions:** `saveMessagesToDb` (Many-Argument Workhorses, Impact: 106.0), `saveMessagesToPO` (Many-Argument Workhorses, Impact: 77.7), `saveMessagesCategoryToPHP` (Many-Argument Workhorses, Impact: 71.1)

### 2. `framework/db/oci/Schema.php` (PHP) -> Cumulative Risk: **566.51**
- **Archetype:** `file_cluster_2` (Distance: N/A IQR)
- **Composition Archetype:** `Large Core Modules` (z +0.20)
- **Magnitude:** 482.84 | **LOC:** 748 | **CtrlFlow:** 19.7% | **Authorship Centralization:** 75.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Tech Debt (98.5463%), Safety Score (97.062%)
- **Heaviest Functions:** `extractColumnType` (Many-Argument Workhorses, Impact: 30.6), `loadTableConstraints` (Compute Cores, Impact: 25.5), `createColumn` (Compute Cores, Impact: 20.3)

### 3. `framework/helpers/BaseArrayHelper.php` (PHP) -> Cumulative Risk: **566.45**
- **Archetype:** `file_cluster_11` (Distance: N/A IQR)
- **Composition Archetype:** `Large Core Modules` (z +0.48)
- **Magnitude:** 729.6 | **LOC:** 1104 | **CtrlFlow:** 33.0% | **Authorship Centralization:** 100.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (97.932%), Tech Debt (97.7329%)
- **Heaviest Functions:** `toArray` (Many-Argument Workhorses, Impact: 38.2), `filter` (Compute Cores, Impact: 37.4), `getValue` (Defensive Guards, Impact: 26.2)

### 4. `framework/console/controllers/BaseMigrateController.php` (PHP) -> Cumulative Risk: **555.95**
- **Archetype:** `file_cluster_2` (Distance: N/A IQR)
- **Composition Archetype:** `Large Core Modules` (z +0.43)
- **Magnitude:** 601.96 | **LOC:** 1020 | **CtrlFlow:** 29.3% | **Authorship Centralization:** 87.5%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (93.7759%), Churn (80.44%)
- **Heaviest Functions:** `actionUp` (Compute Cores, Impact: 26.5), `actionRedo` (Compute Cores, Impact: 23.7), `actionMark` (Compute Cores, Impact: 23.5)

### 5. `framework/db/mssql/Schema.php` (PHP) -> Cumulative Risk: **541.13**
- **Archetype:** `file_cluster_2` (Distance: N/A IQR)
- **Composition Archetype:** `Interface Declarations Files` (z +1.28)
- **Magnitude:** 545.1 | **LOC:** 832 | **CtrlFlow:** 17.0% | **Authorship Centralization:** 100.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (98.1339%), Tech Debt (85.0577%)
- **Heaviest Functions:** `loadColumnSchema` (Compute Cores, Impact: 32.6), `loadTableConstraints` (Compute Cores, Impact: 29.3), `findColumns` (Defensive Guards, Impact: 16.1)

### 6. `framework/console/Controller.php` (PHP) -> Cumulative Risk: **540.29**
- **Archetype:** `file_cluster_11` (Distance: N/A IQR)
- **Composition Archetype:** `Interface Declarations Files` (z +1.63)
- **Magnitude:** 606.28 | **LOC:** 809 | **CtrlFlow:** 28.1% | **Authorship Centralization:** 88.9%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (98.2182%), Churn (95.03%)
- **Heaviest Functions:** `bindActionParams` (Defensive Guards, Impact: 48.7), `runAction` (Defensive Guards, Impact: 43.3), `getActionArgsHelp` (Compute Cores, Impact: 39.6)

### 7. `framework/db/pgsql/Schema.php` (PHP) -> Cumulative Risk: **534.24**
- **Archetype:** `file_cluster_11` (Distance: N/A IQR)
- **Composition Archetype:** `Interface Declarations Files` (z +1.51)
- **Magnitude:** 450.0 | **LOC:** 761 | **CtrlFlow:** 18.8% | **Authorship Centralization:** 75.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (97.0629%), Documentation (70.0%)
- **Heaviest Functions:** `findColumns` (Compute Cores, Impact: 39.9), `loadTableConstraints` (Compute Cores, Impact: 29.3), `loadColumnSchema` (Defensive Guards, Impact: 25.9)

### 8. `framework/helpers/BaseStringHelper.php` (PHP) -> Cumulative Risk: **532.45**
- **Archetype:** `file_cluster_2` (Distance: N/A IQR)
- **Composition Archetype:** `Large Core Modules` (z +0.29)
- **Magnitude:** 473.1 | **LOC:** 592 | **CtrlFlow:** 23.1% | **Authorship Centralization:** 100.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (98.9249%), Tech Debt (91.7983%)
- **Heaviest Functions:** `truncateHtml` (Many-Argument Workhorses, Impact: 40.6), `matchWildcard` (Many-Argument Workhorses, Impact: 27.9), `convertIniSizeToBytes` (Type Conversions, Impact: 13.5)

### 9. `framework/base/Controller.php` (PHP) -> Cumulative Risk: **528.08**
- **Archetype:** `file_cluster_2` (Distance: N/A IQR)
- **Composition Archetype:** `Large Core Modules` (z +0.72)
- **Magnitude:** 313.4 | **LOC:** 599 | **CtrlFlow:** 19.6% | **Authorship Centralization:** 85.7%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Tech Debt (98.2394%), Safety Score (97.2647%)
- **Heaviest Functions:** `runAction` (Compute Cores, Impact: 21.6), `findLayoutFile` (Compute Cores, Impact: 21.6), `bindInjectedParams` (Defensive Guards, Impact: 18.9)

### 10. `framework/web/Controller.php` (PHP) -> Cumulative Risk: **527.1**
- **Archetype:** `file_cluster_11` (Distance: N/A IQR)
- **Composition Archetype:** `Large Core Modules` (z +0.24)
- **Magnitude:** 259.32 | **LOC:** 438 | **CtrlFlow:** 28.2% | **Authorship Centralization:** 100.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Churn (94.99%), Safety Score (90.9157%)
- **Heaviest Functions:** `filterUnionTypeActionParam` (Compute Cores, Impact: 46.2), `bindActionParams` (Defensive Guards, Impact: 32.8), `filterSingleTypeActionParam` (Compute Cores, Impact: 26.1)

## 12. SCANNED ARTIFACTS HITLIST (Top 25 Heaviest Files)
> *Note: 'Magnitude' represents the file's total Structural Magnitude and impact within the system. It is independent of its Risk Profile. High magnitude implies high structural importance and centralization.*

### `framework/helpers/BaseHtml.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_2` (Drift: 0.0 IQR)
- **Magnitude:** 1675.38 | **LOC:** 2412 | **CtrlFlow:** 25.3% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (39.3138%), Tech Debt (75.8553%)
**Top Internal Functions/Classes:**
  * `renderSelectOptions` **(Many-Argument Workhorses)** (Impact: 64.0)
    * *Intent:* * @param array $items the option data items. The array keys are option values, and the array values ...
  * `checkboxList` **(Many-Argument Workhorses)** (Impact: 38.5)
    * *Intent:* * corresponding to a single item in $items. The signature of this callback must be: * * ``` * functi...
  * `renderTagAttributes` **(Compute Cores)** (Impact: 36.7)
    * *Intent:* * the array will be "expanded" and a list of ARIA/data attributes will be rendered. For example, * `...
  * `radioList` **(Many-Argument Workhorses)** (Impact: 31.5)
    * *Intent:* * corresponding to a single item in $items. The signature of this callback must be: * * ``` * functi...
  * `beginForm` **(Many-Argument Workhorses)** (Impact: 30.2)
    * *Intent:* * be simulated using "post", and a hidden input will be added which contains the actual method type....
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 287 instances
* *State Mutation (weighted view):* 932
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 246`, `structural_boundaries: 210`, `args: 74`, `func_start: 74`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 358`, `dead_code: 1`, `unreferenced_by_name: 35`
* *Architecture:* `io: 5`, `api: 71`, `import: 6`
* *Defense:* `safety: 73`, `doc: 81`, `immutability_locks: 1`, `cleanup: 20`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.523
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 5):` Yii, yii\base\InvalidArgumentException, yii\base\Model, yii\db\ActiveRecordInterface, yii\validators\StringValidator, yii\web\Request
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `framework/i18n/Formatter.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_11` (Drift: 0.0 IQR)
- **Magnitude:** 1482.06 | **LOC:** 2198 | **CtrlFlow:** 26.0% | **Authorship Centralization:** 50.0%
- **Risk Profile:** Cognitive Load (29.7078%), Tech Debt (53.2847%)
**Top Internal Functions/Classes:**
  * `formatDateTimeValue` **(Many-Argument Workhorses)** (Impact: 54.1)
    * *Intent:* /** * @param int|string|DateTime|DateTimeInterface|null $value the value to be formatted. The follow...
  * `asDecimalStringFallback` **(Many-Argument Workhorses)** (Impact: 51.9)
    * *Intent:* /** * Fallback for formatting value as a decimal number. * * Property [[decimalSeparator]] will be u...
  * `formatNumber` **(Many-Argument Workhorses)** (Impact: 50.4)
    * *Intent:* /** * Given the value in bytes formats number part of the human readable form. * * @param string|int...
  * `asShortSize` **(Many-Argument Workhorses)** (Impact: 42.2)
    * *Intent:* * This is the short form of [[asSize]]. * * If [[sizeFormatBase]] is 1024, [binary prefixes](https:/...
  * `asSize` **(Many-Argument Workhorses)** (Impact: 42.2)
    * *Intent:* * Formats the value in bytes as a size in human readable form, for example `12 kilobytes`. * * If [[...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 229 instances
* *State Mutation (weighted view):* 713
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 282`, `structural_boundaries: 248`, `args: 46`, `func_start: 46`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 5`, `state_mutation: 255`, `unreferenced_by_name: 28`
* *Architecture:* `api: 57`, `import: 16`
* *Defense:* `safety: 28`, `doc: 79`, `immutability_locks: 6`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 1.403
  * `Choke Point (Betweenness):` 7.4e-05 | `Ripple Effect (Closeness):` 0.008284
  * `Imports (Out-Degree: 9):` $currency = null, $decimals, $decimals = null, $numberOptions, $numberOptions = [], $options, $options = [], $position)
    
        if (isset($this->_unitMessages[$unitType][$unitFormat][$system][$position])) 
            return $this->_unitMessages[$unitType][$unitFormat][$system][$position]...
  * `Imported By (In-Degree: 6):` (Excluded from Brief to save tokens)

### `framework/db/BaseActiveRecord.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_2` (Drift: 0.0 IQR)
- **Magnitude:** 1090.48 | **LOC:** 1860 | **CtrlFlow:** 25.1% | **Authorship Centralization:** 50.0%
- **Risk Profile:** Cognitive Load (46.6623%), Tech Debt (95.5022%)
**Top Internal Functions/Classes:**
  * `unlink` **(Many-Argument Workhorses)** (Impact: 66.3)
    * *Intent:* * The model with the foreign key of the relationship will be deleted if `$delete` is `true`. * Other...
  * `link` **(Many-Argument Workhorses)** (Impact: 57.9)
    * *Intent:* * and **without** events/behaviors. * * If the relationship involves a junction table, a new row wil...
  * `unlinkAll` **(Compute Cores)** (Impact: 47.0)
    * *Intent:* * Destroys the relationship in current model. * * The model with the foreign key of the relationship...
  * `updateInternal` **(Defensive Guards)** (Impact: 16.0)
    * *Intent:* /** * @see update() * @param array|null $attributes attributes to update * @return int|false the num...
  * `getRelation` **(Defensive Guards)** (Impact: 15.7)
    * *Intent:* /** * Returns the relation object with the specified name. * A relation is defined by a getter metho...
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 2 instances
* *Amplified Cascading Flux:* 156 instances
* *Memory Alloc (weighted view):* 19
* *State Mutation (weighted view):* 491
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 217`, `structural_boundaries: 208`, `args: 70`, `func_start: 69`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 179`, `dead_code: 1`, `planned_debt: 3`, `unreferenced_by_name: 30`
* *Architecture:* `api: 70`, `import: 10`
* *Defense:* `safety: 61`, `doc: 105`, `sync_locks: 16`, `immutability_locks: 9`, `cleanup: 14`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 1.867
  * `Choke Point (Betweenness):` 0.000218 | `Ripple Effect (Closeness):` 0.012353
  * `Imports (Out-Degree: 10):` 
        $relation = $this->getRelation($name, $model, $offset)) 
            $this->$offset = null, Yii, 
    public function link($name, 
    public function offsetUnset($offset)
    
        if (property_exists($this, 
    #[\ReturnTypeWillChange]
    public function offsetExists($offset)
    
        return $this->__isset($offset, e.g. `orders` for a relation defined via `getOrders()` method.
     * @param ActiveRecordInterface $model the model to be linked with the current one.
     * @param array $extraColumns additional column values to be saved into the junction table.
     * This parameter is only meaningful for a relationship involving a junction table
     * (i.e....
  * `Imported By (In-Degree: 9):` (Excluded from Brief to save tokens)

### `framework/web/Request.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_1` (Drift: 0.0 IQR)
- **Magnitude:** 1085.16 | **LOC:** 2041 | **CtrlFlow:** 26.4% | **Authorship Centralization:** 75.0%
- **Risk Profile:** Cognitive Load (37.087%), Tech Debt (99.4132%)
**Top Internal Functions/Classes:**
  * `parseAcceptHeader` **(Compute Cores)** (Impact: 30.2)
    * *Intent:* * $accepts = $request->parseAcceptHeader($header); * print_r($accepts); * // displays: * // [ * // '...
  * `getUserIpFromIpHeaders` **(Compute Cores)** (Impact: 23.4)
    * *Intent:* /** * Returns the user IP address from [[ipHeaders]]. * @return string|null user IP address, null if...
  * `loadCookies` **(Compute Cores)** (Impact: 18.1)
    * *Intent:* /** * Converts `$_COOKIE` into an array of [[Cookie]]. * @return array the cookies obtained from req...
  * `getUserIpFromIpHeader` **(Compute Cores)** (Impact: 17.2)
    * *Intent:* /** * Return user IP's from IP header. * * @param string $ips comma separated IP list * @return stri...
  * `getHostInfo` **(Compute Cores)** (Impact: 14.2)
    * *Intent:* * You may explicitly specify it by setting the [[setHostInfo()|hostInfo]] property. * * > Warning: D...
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 1 instances
* *Amplified Cascading Flux:* 174 instances
* *Memory Alloc (weighted view):* 10
* *State Mutation (weighted view):* 548
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 254`, `structural_boundaries: 244`, `args: 89`, `func_start: 83`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 6`, `state_mutation: 200`, `planned_debt: 5`, `fragile_debt: 4`, `unreferenced_by_name: 40`
* *Architecture:* `io: 16`, `api: 86`, `import: 3`
* *Defense:* `safety: 42`, `doc: 109`, `immutability_locks: 2`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.523
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 3):` ', 
    public function getBaseUrl()
    
        if ($this->_baseUrl === null) 
            $this->_baseUrl = rtrim(dirname($this->getScriptUrl()), * forms submitted via POST method must contain a hidden input whose name is specified by [[csrfParam]].
     * You may use [[\yii\helpers\Html::beginForm()]] to generate his hidden input.
     *
     * In JavaScript, Yii, 
    public function getOrigin()
    
        return $this->getHeaders()->get('origin', any path information, but, but only the server name.
     * It is sent with a CORS requests...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `framework/console/controllers/MessageController.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_11` (Drift: 0.0 IQR)
- **Magnitude:** 895.54 | **LOC:** 1028 | **CtrlFlow:** 26.5% | **Authorship Centralization:** 66.7%
- **Risk Profile:** Cognitive Load (37.145%), Tech Debt (38.9323%)
**Top Internal Functions/Classes:**
  * `saveMessagesToDb` **(Many-Argument Workhorses)** (Impact: 106.0)
  * `saveMessagesToPO` **(Many-Argument Workhorses)** (Impact: 77.7)
  * `saveMessagesCategoryToPHP` **(Many-Argument Workhorses)** (Impact: 71.1)
  * `extractMessagesFromTokens` **(Many-Argument Workhorses)** (Impact: 67.0)
  * `initConfig` **(Defensive Guards)** (Impact: 20.6)
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 3 instances
* *Amplified Cascading Flux:* 129 instances
* *Memory Alloc (weighted view):* 16
* *State Mutation (weighted view):* 418
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 165`, `structural_boundaries: 106`, `args: 17`, `func_start: 17`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 7`, `state_mutation: 160`, `planned_debt: 6`, `unreferenced_by_name: 5`
* *Architecture:* `io: 3`, `api: 24`, `import: 14`
* *Defense:* `safety: 30`, `doc: 41`, `cleanup: 2`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.597
  * `Choke Point (Betweenness):` 1.3e-05 | `Ripple Effect (Closeness):` 0.00098
  * `Imports (Out-Degree: 9):` $configFile, $fileName, 
    public $languages = [], Yii, ['zh-CN', d, 
    public function actionConfig($filePath)
    
        $filePath = Yii::getAlias($filePath, list of language codes that the extracted messages
     * should be translated to. For example...
  * `Imported By (In-Degree: 1):` (Excluded from Brief to save tokens)

### `framework/helpers/BaseFileHelper.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_11` (Drift: 0.0 IQR)
- **Magnitude:** 867.0 | **LOC:** 1032 | **CtrlFlow:** 34.1% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (42.6773%), Tech Debt (26.2216%)
**Top Internal Functions/Classes:**
  * `changeOwnership` **(Many-Argument Workhorses)** (Impact: 58.9)
    * *Intent:* * @param string|array|int|null $ownership the user and/or group ownership for the file or directory....
  * `copyDirectory` **(Defensive Guards)** (Impact: 52.8)
    * *Intent:* * - recursive: boolean, whether the files under the subdirectories should also be copied. Defaults t...
  * `normalizePath` **(Defensive Guards)** (Impact: 32.7)
    * *Intent:* * The normalization does the following work: * * - Convert all directory separators into `DIRECTORY_...
  * `matchPathname` **(Many-Argument Workhorses)** (Impact: 31.5)
    * *Intent:* /** * Compares a path part against a pattern with optional wildcards. * * Based on match_pathname() ...
  * `lastExcludeMatchingFromList` **(Defensive Guards)** (Impact: 27.4)
    * *Intent:* /** * Scan the given exclude list in reverse to see whether pathname * should be ignored. The first ...
**Contextual Mitigations & Amplifications:**
* *Mitigated Danger:* 1 instances
* *Amplified Cascading Flux:* 127 instances
* *High Risk Execution (weighted view):* 0
* *State Mutation (weighted view):* 387
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 198`, `structural_boundaries: 120`, `args: 28`, `func_start: 26`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 5`, `high_risk_execution: 1`, `state_mutation: 133`, `dead_code: 1`, `unreferenced_by_name: 8`
* *Architecture:* `api: 22`, `import: 10`
* *Defense:* `safety: 50`, `doc: 31`, `immutability_locks: 5`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.523
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 4):` $aliasesFile, $extensionsFile, $magicFile, $options = [])
    
        $dir = self::clearDir($dir, Yii, `\!important!.txt`.
     *   Note, d again.
     *   If a negated pattern matches, flags and firstWildcard keys.'...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tests/framework/db/ActiveRecordTest.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_0` (Drift: 0.0 IQR)
- **Magnitude:** 851.22 | **LOC:** 2320 | **CtrlFlow:** 4.1% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (16.3558%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `testJoinWithAlias` **(Compute Cores)** (Impact: 58.6)
    * *Intent:* /** * Tests the alias syntax for joinWith: 'alias' => 'relation'. * @dataProvider aliasMethodProvide...
  * `testPopulateWithoutPk` **(I/O & Config Routines)** (Impact: 13.3)
  * `testAmbiguousColumnIndexBy` **(Compute Cores)** (Impact: 13.2)
    * *Intent:* /** * Ensure no ambiguous column error occurs on indexBy with JOIN. * * @see https://github.com/yiis...
  * `testJoinWith` **(Tests & Verification)** (Impact: 10.0)
  * `testLoadRelations` **(Tests & Verification)** (Impact: 9.6)
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 2 instances
* *Amplified Cascading Flux:* 54 instances
* *Memory Alloc (weighted view):* 23
* *State Mutation (weighted view):* 445
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 72`, `structural_boundaries: 250`, `args: 131`, `func_start: 94`, `class_start: 4`
* *Risk/State:* `safety_bypasses: 22`, `high_risk_execution: 4`, `state_mutation: 337`, `dead_code: 2`, `duplicate_logic: 2`, `unreferenced_by_name: 83`
* *Architecture:* `api: 93`, `import: 36`
* *Defense:* `safety: 6`, `doc: 72`, `test: 383`, `cleanup: 2`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.523
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 31):` ActiveRecordTestTrait, Yii, yii\base\InvalidArgumentException, yii\base\InvalidConfigException, yii\db\ActiveQuery, yii\db\ActiveRecordInterface, yii\db\Query, yii\helpers\ArrayHelper...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `framework/helpers/BaseConsole.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_2` (Drift: 0.0 IQR)
- **Magnitude:** 788.16 | **LOC:** 1208 | **CtrlFlow:** 19.9% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (47.9322%), Tech Debt (99.7001%)
**Top Internal Functions/Classes:**
  * `ansiToHtml` **(Many-Argument Workhorses)** (Impact: 34.4)
    * *Intent:* /** * Converts an ANSI formatted string to HTML. * * Note: xTerm 256 bit colors are currently not su...
  * `ansiColorizedSubstr` **(Many-Argument Workhorses)** (Impact: 30.3)
    * *Intent:* /** * Returns the portion with ANSI color codes of string specified by the start and length paramete...
  * `getScreenSize` **(Compute Cores)** (Impact: 28.1)
    * *Intent:* /** * Returns terminal screen size. * * Usage: * * ``` * list($width, $height) = ConsoleHelper::getS...
  * `prompt` **(Compute Cores)** (Impact: 27.8)
    * *Intent:* * Prompts the user for input and validates it. * * @param string $text prompt string * @param array ...
  * `updateProgress` **(Many-Argument Workhorses)** (Impact: 23.8)
    * *Intent:* /** * Updates a progress bar that has been started by [[startProgress()]]. * * @param int $done the ...
**Contextual Mitigations & Amplifications:**
* *Mitigated Danger:* 2 instances
* *Amplified Cascading Flux:* 114 instances
* *High Risk Execution (weighted view):* 2
* *State Mutation (weighted view):* 375
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 124`, `structural_boundaries: 122`, `args: 57`, `func_start: 54`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 6`, `high_risk_execution: 4`, `state_mutation: 147`, `dead_code: 1`, `planned_debt: 2`, `unreferenced_by_name: 33`
* *Architecture:* `io: 2`, `api: 78`, `import: 3`
* *Defense:* `safety: 11`, `doc: 56`, `immutability_locks: 28`, `cleanup: 2`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 0.745
  * `Choke Point (Betweenness):` 9e-06 | `Ripple Effect (Closeness):` 0.00098
  * `Imports (Out-Degree: 2):` $default = null)
    
        top:
        static::stdout("$prompt (" . implode(', $options, $options = [], $options = [])
    
        $options = ArrayHelper::merge(
            [
                'required' => false, ', 'default' => null, 'error' => 'Invalid input.', 'pattern' => null...
  * `Imported By (In-Degree: 1):` (Excluded from Brief to save tokens)

### `framework/helpers/BaseArrayHelper.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_11` (Drift: 0.0 IQR)
- **Magnitude:** 729.6 | **LOC:** 1104 | **CtrlFlow:** 33.0% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (42.1695%), Tech Debt (97.7329%)
**Top Internal Functions/Classes:**
  * `toArray` **(Many-Argument Workhorses)** (Impact: 38.2)
    * *Intent:* * The result of `ArrayHelper::toArray($post, $properties)` could be like the following: * * ``` * [ ...
  * `filter` **(Compute Cores)** (Impact: 37.4)
    * *Intent:* * // [ * // 'B' => ['D' => 2], * // ] * ``` * * @param array $array Source array * @param iterable $...
  * `getValue` **(Defensive Guards)** (Impact: 26.2)
    * *Intent:* * $street = \yii\helpers\ArrayHelper::getValue($users, 'address.street'); * // using an array of key...
  * `merge` **(Defensive Guards)** (Impact: 22.1)
    * *Intent:* * Merges two or more arrays into one recursively. * If each array has an element with the same strin...
  * `multisort` **(Many-Argument Workhorses)** (Impact: 21.8)
    * *Intent:* * @param array $array the array to be sorted. The array will be modified after calling this method. ...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 114 instances
* *State Mutation (weighted view):* 347
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 150`, `structural_boundaries: 111`, `args: 21`, `func_start: 21`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 119`, `dead_code: 9`, `planned_debt: 7`, `unreferenced_by_name: 15`
* *Architecture:* `api: 21`, `import: 5`
* *Defense:* `safety: 22`, `doc: 23`, `cleanup: 6`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.523
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 3):` $direction = SORT_ASC, $key, $sortFlag = SORT_REGULAR)
    
        $keys = is_array($key) ? $key : [$key], * `SORT_REGULAR`, ArrayAccess, Traversable, Yii, `SORT_LOCALE_STRING`...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `framework/db/Query.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_2` (Drift: 0.0 IQR)
- **Magnitude:** 672.56 | **LOC:** 1403 | **CtrlFlow:** 19.5% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (34.6805%), Tech Debt (90.087%)
**Top Internal Functions/Classes:**
  * `column` **(Compute Cores)** (Impact: 23.2)
    * *Intent:* /** * Executes the query and returns the first column of the result. * @param Connection|null $db th...
  * `normalizeSelect` **(Compute Cores)** (Impact: 23.0)
    * *Intent:* /** * Add more columns to the SELECT part of the query. * * Note, that if [[select]] has not been sp...
  * `cleanUpTableNames` **(Defensive Guards)** (Impact: 17.1)
    * *Intent:* /** * Clean up table names and aliases * Both aliases and names are enclosed into {{ and }}. * @para...
  * `getUniqueColumns` **(Defensive Guards)** (Impact: 16.8)
  * `queryScalar` **(Defensive Guards)** (Impact: 14.7)
    * *Intent:* /** * Queries a scalar value by setting [[select]] first. * Restores the value of select to make thi...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 97 instances
* *State Mutation (weighted view):* 337
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 110`, `structural_boundaries: 142`, `args: 51`, `func_start: 51`, `class_start: 1`
* *Risk/State:* `state_mutation: 143`, `dead_code: 2`, `unreferenced_by_name: 26`
* *Architecture:* `api: 56`, `import: 7`
* *Defense:* `safety: 24`, `doc: 65`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 7.416
  * `Choke Point (Betweenness):` 0.000332 | `Ripple Effect (Closeness):` 0.052713
  * `Imports (Out-Degree: 6):` "CONCAT(first_name, $params = [])
    
        $this->where = $condition, ' ', QueryTrait, Yii, `*` explicitly
     * if you want to select all remaining columns too:
     *
     * ```
     * $query->addSelect(["*", 
    public function where($condition, 
    public function populate($rows)
    
        if ($this->indexBy === null) 
            return $rows...
  * `Imported By (In-Degree: 50):` (Excluded from Brief to save tokens)

### `tests/framework/helpers/HtmlTest.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_6` (Drift: 0.0 IQR)
- **Magnitude:** 636.66 | **LOC:** 2351 | **CtrlFlow:** 1.2% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (19.5074%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `testNonStrictBooleanDropDownList` **(Many-Argument Workhorses)** (Impact: 9.5)
  * `testStrictBooleanDropDownList` **(Many-Argument Workhorses)** (Impact: 9.5)
    * *Intent:* /** * @dataProvider providerForNonStrictBooleanDropDownList
  * `setActivePlaceholder` **(Defensive Guards)** (Impact: 6.3)
  * `testErrorSummary` **(Many-Argument Workhorses)** (Impact: 5.0)
  * `testCheckboxList` **(I/O & Config Routines)** (Impact: 4.5)
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 20 instances
* *State Mutation (weighted view):* 252
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 20`, `structural_boundaries: 323`, `args: 125`, `func_start: 112`, `class_start: 3`
* *Risk/State:* `state_mutation: 212`, `dead_code: 2`, `unreferenced_by_name: 108`
* *Architecture:* `io: 3`, `api: 107`, `import: 10`
* *Defense:* `safety: 3`, `doc: 37`, `test: 170`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.523
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 8):` 'boolean'], 'checkbox'], 'length' => 10], 'length' => [0, 'mail', 'max' => 100], 'max' => 500], 'string'...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `framework/db/ActiveQuery.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_2` (Drift: 0.0 IQR)
- **Magnitude:** 611.8 | **LOC:** 867 | **CtrlFlow:** 26.4% | **Authorship Centralization:** 83.3%
- **Risk Profile:** Cognitive Load (38.347%), Tech Debt (40.3985%)
**Top Internal Functions/Classes:**
  * `joinWithRelation` **(Defensive Guards)** (Impact: 41.3)
    * *Intent:* /** * Joins a parent query with a child query. * The current query object will be modified according...
  * `prepare` **(Compute Cores)** (Impact: 31.8)
    * *Intent:* /** * {@inheritdoc} */
  * `joinWithRelations` **(Many-Argument Workhorses)** (Impact: 24.2)
    * *Intent:* /** * Modifies the current query by adding join fragments based on the given relations. * @param Act...
  * `removeDuplicatedModels` **(Defensive Guards)** (Impact: 23.5)
    * *Intent:* /** * Removes duplicated models by checking their primary key values. * This method is mainly called...
  * `joinWith` **(Many-Argument Workhorses)** (Impact: 19.6)
    * *Intent:* * The alias syntax is available since version 2.0.7. * * @param bool|array $eagerLoading whether to ...
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 1 instances
* *Amplified Cascading Flux:* 110 instances
* *Memory Alloc (weighted view):* 2
* *State Mutation (weighted view):* 338
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 119`, `structural_boundaries: 76`, `args: 24`, `func_start: 23`, `class_start: 1`
* *Risk/State:* `state_mutation: 118`, `dead_code: 1`, `unreferenced_by_name: 9`
* *Architecture:* `api: 19`, `import: 3`
* *Defense:* `safety: 35`, `doc: 36`, `immutability_locks: 1`, `cleanup: 5`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 5.083
  * `Choke Point (Betweenness):` 8.7e-05 | `Ripple Effect (Closeness):` 0.018007
  * `Imports (Out-Degree: 3):` ActiveQueryTrait, ActiveRelationTrait, yii\base\InvalidConfigException
  * `Imported By (In-Degree: 13):` (Excluded from Brief to save tokens)

### `framework/db/ActiveRelationTrait.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_11` (Drift: 0.0 IQR)
- **Magnitude:** 611.44 | **LOC:** 639 | **CtrlFlow:** 33.2% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (41.5422%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `populateRelation` **(Many-Argument Workhorses)** (Impact: 64.1)
    * *Intent:* /** * Finds the related records and populates them into the primary models. * @param string $name th...
  * `populateInverseRelation` **(Many-Argument Workhorses)** (Impact: 58.7)
    * *Intent:* /** * @param ActiveRecordInterface[]|array<array-key, array<string, mixed>> $primaryModels primary m...
  * `buildBuckets` **(Many-Argument Workhorses)** (Impact: 36.8)
    * *Intent:* /** * @param array $models * @param array $link * @param array|null $viaModels * @param self<ActiveR...
  * `filterByModels` **(Compute Cores)** (Impact: 31.2)
    * *Intent:* /** * @param array $models */
  * `prefixKeyColumns` **(Defensive Guards)** (Impact: 16.8)
    * *Intent:* /** * @param array $attributes the attributes to prefix * @return array */
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 106 instances
* *State Mutation (weighted view):* 320
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 127`, `structural_boundaries: 68`, `args: 15`, `func_start: 15`, `class_start: 1`
* *Risk/State:* `state_mutation: 108`, `dead_code: 1`
* *Architecture:* `api: 11`, `import: 2`
* *Defense:* `safety: 42`, `doc: 29`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 1.961
  * `Choke Point (Betweenness):` 1.8e-05 | `Ripple Effect (Closeness):` 0.011777
  * `Imports (Out-Degree: 2):` yii\base\InvalidArgumentException, yii\base\InvalidConfigException
  * `Imported By (In-Degree: 1):` (Excluded from Brief to save tokens)

### `framework/console/Controller.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_11` (Drift: 0.0 IQR)
- **Magnitude:** 606.28 | **LOC:** 809 | **CtrlFlow:** 28.1% | **Authorship Centralization:** 88.9%
- **Risk Profile:** Cognitive Load (47.8185%), Tech Debt (83.69%)
**Top Internal Functions/Classes:**
  * `bindActionParams` **(Defensive Guards)** (Impact: 48.7)
    * *Intent:* /** * Binds the parameters to the action. * This method is invoked by [[Action]] when it begins to r...
  * `runAction` **(Defensive Guards)** (Impact: 43.3)
    * *Intent:* /** * Runs an action with the specified action ID and parameters. * If the action ID is empty, the m...
  * `getActionArgsHelp` **(Compute Cores)** (Impact: 39.6)
    * *Intent:* * - required: bool, whether this argument is required * - type: string|null, the PHP type(s) of this...
  * `getActionOptionsHelp` **(Defensive Guards)** (Impact: 22.2)
    * *Intent:* * * - type: string, the PHP type of this argument. * - default: string, the default value of this ar...
  * `parseDocCommentTags` **(Compute Cores)** (Impact: 10.9)
    * *Intent:* /** * Parses the comment block into tags. * @param \ReflectionClass<object>|\ReflectionProperty|\Ref...
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 4 instances
* *Amplified Cascading Flux:* 112 instances
* *Memory Alloc (weighted view):* 0
* *State Mutation (weighted view):* 340
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 112`, `structural_boundaries: 92`, `args: 25`, `func_start: 25`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 116`, `dead_code: 3`, `unreferenced_by_name: 16`
* *Architecture:* `io: 1`, `api: 27`, `import: 8`
* *Defense:* `safety: 30`, `doc: 35`, `immutability_locks: 2`, `cleanup: 6`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.523
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 5):` $default, $default = null)
    
        if ($this->interactive) 
            return Console::select($prompt, $missing)]), $options, $options = [], &$error) 
     *     if (strlen($input) !== 4) 
     *         $error = 'The Pin must be exactly 4 chars!', ', 'comment' => $comment...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `framework/console/controllers/BaseMigrateController.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_2` (Drift: 0.0 IQR)
- **Magnitude:** 601.96 | **LOC:** 1020 | **CtrlFlow:** 29.3% | **Authorship Centralization:** 87.5%
- **Risk Profile:** Cognitive Load (38.1639%), Tech Debt (57.7924%)
**Top Internal Functions/Classes:**
  * `actionUp` **(Compute Cores)** (Impact: 26.5)
    * *Intent:* * Upgrades the application by applying new migrations. * * For example, * * ``` * yii migrate # appl...
  * `actionRedo` **(Compute Cores)** (Impact: 23.7)
    * *Intent:* * them again. For example, * * ``` * yii migrate/redo # redo the last applied migration * yii migrat...
  * `actionMark` **(Compute Cores)** (Impact: 23.5)
    * *Intent:* * ``` * yii migrate/mark 101129_185401 # using timestamp * yii migrate/mark m101129_185401_create_us...
  * `actionDown` **(Compute Cores)** (Impact: 22.0)
    * *Intent:* * For example, * * ``` * yii migrate/down # revert the last migration * yii migrate/down 3 # revert ...
  * `getNewMigrations` **(Compute Cores)** (Impact: 21.4)
    * *Intent:* /** * Returns the migrations that are not applied. * @return array list of new migrations */
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 96 instances
* *State Mutation (weighted view):* 296
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 156`, `structural_boundaries: 141`, `args: 30`, `func_start: 29`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 2`, `state_mutation: 104`, `planned_debt: 1`, `unreferenced_by_name: 9`
* *Architecture:* `io: 1`, `api: 19`, `import: 15`
* *Defense:* `safety: 24`, `doc: 40`, `immutability_locks: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.605
  * `Choke Point (Betweenness):` 8e-06 | `Ripple Effect (Closeness):` 0.001307
  * `Imports (Out-Degree: 9):` '\\', MigrationFile($class, Yii, _once $file, 
    protected function includeMigrationFile($class)
    
        $class = trim($class, s the migration file for a given migration class name.
     *
     * This function will do nothing on namespaced migrations, which are loaded by
     * autoloading automatically. It will include the migration file, yii\base\Action...
  * `Imported By (In-Degree: 1):` (Excluded from Brief to save tokens)

### `framework/console/controllers/AssetController.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_11` (Drift: 0.0 IQR)
- **Magnitude:** 598.78 | **LOC:** 847 | **CtrlFlow:** 25.2% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (37.4276%), Tech Debt (14.4691%)
**Top Internal Functions/Classes:**
  * `adjustCssUrl` **(Many-Argument Workhorses)** (Impact: 51.5)
  * `loadTargets` **(Defensive Guards)** (Impact: 35.7)
    * *Intent:* /** * Creates full list of output asset bundles. * @param array $targets output asset bundles config...
  * `buildTarget` **(Many-Argument Workhorses)** (Impact: 25.9)
    * *Intent:* /** * Builds output asset bundle. * @param \yii\web\AssetBundle $target output asset bundle * @param...
  * `adjustDependency` **(Compute Cores)** (Impact: 17.6)
    * *Intent:* /** * Adjust dependencies between asset bundles in the way source bundles begin to depend on output ...
  * `saveTargets` **(Defensive Guards)** (Impact: 13.9)
    * *Intent:* /** * Saves new asset bundles configuration. * @param \yii\web\AssetBundle[] $targets list of asset ...
**Contextual Mitigations & Amplifications:**
* *Mitigated Danger:* 2 instances
* *Mitigated Memory Allocs:* 2 instances
* *Amplified Cascading Flux:* 95 instances
* *High Risk Execution (weighted view):* 0
* *Memory Alloc (weighted view):* 16
* *State Mutation (weighted view):* 306
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 122`, `structural_boundaries: 111`, `args: 24`, `func_start: 22`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 6`, `high_risk_execution: 2`, `state_mutation: 116`, `unreferenced_by_name: 3`
* *Architecture:* `io: 6`, `api: 12`, `import: 10`
* *Defense:* `safety: 44`, `doc: 37`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.572
  * `Choke Point (Betweenness):` 2e-06 | `Ripple Effect (Closeness):` 0.00098
  * `Imports (Out-Degree: 6):` $configFile, *         'app\assets\SharedAsset', all-hash.css',  Include only 'backend' assets:
     *         'app\assets\AdminAsset'
     *     ], *     'depends' => [], *     ], all-hash.js', all-hash.js'...
  * `Imported By (In-Degree: 1):` (Excluded from Brief to save tokens)

### `tests/framework/db/CommandTest.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_0` (Drift: 0.0 IQR)
- **Magnitude:** 582.5 | **LOC:** 1680 | **CtrlFlow:** 4.1% | **Authorship Centralization:** 50.0%
- **Risk Profile:** Cognitive Load (21.4681%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `testBindParamValue` **(I/O & Config Routines)** (Impact: 20.4)
  * `testInsertExpression` **(I/O & Config Routines)** (Impact: 13.8)
  * `upsertProvider` **(I/O & Config Routines)** (Impact: 8.5)
  * `testAddDropForeignKey` **(Many-Argument Workhorses)** (Impact: 6.5)
    * *Intent:* /** * @dataProvider addForeignKeyProvider * * @param string $name * @param string $tableName
  * `testAutoRefreshTableSchema` **(I/O & Config Routines)** (Impact: 6.3)
**Contextual Mitigations & Amplifications:**
* *Mitigated Danger:* 4 instances
* *Amplified Cascading Flux:* 58 instances
* *Api Near Db Sink:* 7 instances
* *High Risk Execution (weighted view):* 4
* *State Mutation (weighted view):* 319
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 54`, `structural_boundaries: 117`, `args: 58`, `func_start: 53`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 31`, `high_risk_execution: 8`, `state_mutation: 203`, `dead_code: 2`, `planned_debt: 2`, `unreferenced_by_name: 51`
* *Architecture:* `io: 15`, `api: 52`, `import: 15`
* *Defense:* `safety: 25`, `doc: 16`, `test: 113`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.523
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 10):` ArrayObject, PDO, Throwable, Transaction', testBatchInsertWithYield.php', yii\base\InvalidArgumentException, yii\caching\ArrayCache, yii\db\Connection...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `framework/web/Response.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_14` (Drift: 0.0 IQR)
- **Magnitude:** 582.32 | **LOC:** 1158 | **CtrlFlow:** 20.1% | **Authorship Centralization:** 50.0%
- **Risk Profile:** Cognitive Load (34.9225%), Tech Debt (92.652%)
**Top Internal Functions/Classes:**
  * `redirect` **(Many-Argument Workhorses)** (Impact: 29.9)
    * *Intent:* * * Any relative URL that starts with a single forward slash "/" will be converted * into an absolut...
  * `sendStreamAsFile` **(Many-Argument Workhorses)** (Impact: 21.8)
    * *Intent:* * @param string $attachmentName the file name shown to the user. * @param array $options additional ...
  * `sendContent` **(I/O & Config Routines)** (Impact: 18.8)
    * *Intent:* /** * Sends the response content to the client. */
  * `sendCookies` **(Defensive Guards)** (Impact: 18.3)
    * *Intent:* /** * Sends the cookies to the client. */
  * `prepare` **(Compute Cores)** (Impact: 16.1)
    * *Intent:* /** * Prepares for sending the response. * The default implementation will convert [[data]] into [[c...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 89 instances
* *State Mutation (weighted view):* 292
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 117`, `structural_boundaries: 101`, `args: 34`, `func_start: 33`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 10`, `state_mutation: 114`, `planned_debt: 1`, `fragile_debt: 1`, `unreferenced_by_name: 17`
* *Architecture:* `io: 7`, `api: 45`, `import: 8`
* *Defense:* `safety: 20`, `doc: 53`, `immutability_locks: 8`, `cleanup: 2`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.523
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 8):` 403 => 'Forbidden', 404 => 'Not Found', 405 => 'Method Not Allowed', 406 => 'Not Acceptable', 407 => 'Proxy Authentication Required', 408 => 'Request Time-out', 409 => 'Conflict', 410 => 'Gone'...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `framework/rbac/DbManager.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_2` (Drift: 0.0 IQR)
- **Magnitude:** 562.4 | **LOC:** 1138 | **CtrlFlow:** 14.2% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (29.8491%), Tech Debt (84.3486%)
**Top Internal Functions/Classes:**
  * `checkAccessFromCache` **(Defensive Guards)** (Impact: 21.5)
    * *Intent:* /** * Performs access check for the specified user based on the data loaded from cache. * This metho...
  * `checkAccessRecursive` **(Many-Argument Workhorses)** (Impact: 19.3)
    * *Intent:* /** * Performs access check for the specified user. * This method is internally called by [[checkAcc...
  * `loadFromCache` **(I/O & Config Routines)** (Impact: 13.0)
  * `checkAccess` **(Type Conversions)** (Impact: 11.0)
    * *Intent:* /** * {@inheritdoc} */
  * `getRolesByUser` **(Compute Cores)** (Impact: 10.1)
    * *Intent:* /** * {@inheritdoc} * The roles returned by this method include the roles assigned via [[$defaultRol...
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 1 instances
* *Amplified Cascading Flux:* 76 instances
* *Api Near Db Sink:* 5 instances
* *Memory Alloc (weighted view):* 27
* *State Mutation (weighted view):* 249
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 100`, `structural_boundaries: 184`, `args: 50`, `func_start: 49`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 6`, `state_mutation: 97`, `unreferenced_by_name: 29`
* *Architecture:* `api: 35`, `import: 8`
* *Defense:* `safety: 22`, `doc: 63`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 1.483
  * `Choke Point (Betweenness):` 7.1e-05 | `Ripple Effect (Closeness):` 0.006863
  * `Imports (Out-Degree: 7):` 
    public $cache, Yii, extra memory and, rules or parent-child relationships from outside of this component, 
    public function getRolesByUser($userId)
    
        if ($this->isEmptyUserId($userId)) 
            return [], yii\base\InvalidArgumentException, yii\base\InvalidCallException, yii\caching\CacheInterface...
  * `Imported By (In-Degree: 7):` (Excluded from Brief to save tokens)

### `framework/db/Connection.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_2` (Drift: 0.0 IQR)
- **Magnitude:** 550.14 | **LOC:** 1289 | **CtrlFlow:** 17.8% | **Authorship Centralization:** 80.0%
- **Risk Profile:** Cognitive Load (36.3811%), Tech Debt (82.6625%)
**Top Internal Functions/Classes:**
  * `openFromPoolSequentially` **(Defensive Guards)** (Impact: 25.7)
    * *Intent:* * connection attempts to unavailable servers saves time when the connection attempts fail due to tim...
  * `getQueryCacheInfo` **(Compute Cores)** (Impact: 20.5)
    * *Intent:* /** * Returns the current query cache information. * This method is used internally by [[Command]]. ...
  * `createPdoInstance` **(I/O & Config Routines)** (Impact: 14.6)
    * *Intent:* /** * Creates the PDO instance. * This method is called by [[open]] to establish a DB connection. * ...
  * `open` **(Defensive Guards)** (Impact: 11.2)
    * *Intent:* /** * Establishes a DB connection. * It does nothing if a DB connection has already been established...
  * `initConnection` **(I/O & Config Routines)** (Impact: 11.1)
    * *Intent:* /** * Initializes the DB connection. * This method is invoked right after the DB connection is estab...
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 1 instances
* *Amplified Rce:* 2 instances
* *Amplified Cascading Flux:* 79 instances
* *Memory Alloc (weighted view):* 5
* *Sec Tainted Injection (weighted view):* 2
* *State Mutation (weighted view):* 284
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 92`, `structural_boundaries: 104`, `args: 36`, `func_start: 35`, `class_start: 1`
* *Risk/State:* `high_risk_execution: 2`, `state_mutation: 126`, `dead_code: 5`, `planned_debt: 1`, `unreferenced_by_name: 13`
* *Architecture:* `io: 12`, `api: 64`, `import: 6`
* *Defense:* `safety: 47`, `doc: 84`, `immutability_locks: 4`, `cleanup: 6`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 8.504
  * `Choke Point (Betweenness):` 0.000396 | `Ripple Effect (Closeness):` 0.069007
  * `Imports (Out-Degree: 5):` PDO, Yii, d PHP version is >= 5.5
            $this->enableSlaves = true, d by some DBMS)
     * @return string the row ID of the last row inserted, ref.pdo-sqlite.connection.php) you may use a [path alias](guide:concept-aliases)
     * for specifying the database path, 
    public $dsn, 
    public function getLastInsertID($sequenceName = '')
    
        return $this->getSchema()->getLastInsertID($sequenceName, yii\base\Component...
  * `Imported By (In-Degree: 42):` (Excluded from Brief to save tokens)

### `framework/di/Container.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_11` (Drift: 0.0 IQR)
- **Magnitude:** 546.98 | **LOC:** 833 | **CtrlFlow:** 32.4% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (42.0684%), Tech Debt (67.0082%)
**Top Internal Functions/Classes:**
  * `resolveCallableDependencies` **(Defensive Guards)** (Impact: 71.7)
    * *Intent:* /** * Resolve dependencies for a function. * * This method can be used to implement similar function...
  * `getDependencies` **(Defensive Guards)** (Impact: 30.4)
    * *Intent:* /** * Returns the dependencies of the specified class. * * @template T of object * * @param class-st...
  * `build` **(Many-Argument Workhorses)** (Impact: 24.4)
    * *Intent:* /** * Creates an instance of the specified class. * This method will resolve dependencies of the spe...
  * `get` **(Many-Argument Workhorses)** (Impact: 24.1)
    * *Intent:* * * @param string|class-string<T>|Instance $class the class Instance, name, or an alias name (e.g. `...
  * `normalizeDefinition` **(Defensive Guards)** (Impact: 23.9)
    * *Intent:* /** * Normalizes the class definition. * @param string $class class name * @param string|array|calla...
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 5 instances
* *Amplified Cascading Flux:* 85 instances
* *Memory Alloc (weighted view):* 5
* *State Mutation (weighted view):* 273
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 121`, `structural_boundaries: 96`, `args: 20`, `func_start: 20`, `class_start: 1`
* *Risk/State:* `state_mutation: 103`, `planned_debt: 1`, `unreferenced_by_name: 7`
* *Architecture:* `api: 12`, `import: 8`
* *Defense:* `safety: 35`, `doc: 31`, `cleanup: 7`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 1.352
  * `Choke Point (Betweenness):` 4.8e-05 | `Ripple Effect (Closeness):` 0.006972
  * `Imports (Out-Degree: 6):` *     'dsn' => 'mysql:host=127.0.0.1, ReflectionClass, ReflectionException, ReflectionNamedType, ReflectionParameter, Yii, [
     *     'class' => 'yii\db\Connection', d parameter \"$name\" when calling \"$funcName\"."...
  * `Imported By (In-Degree: 7):` (Excluded from Brief to save tokens)

### `framework/db/mssql/Schema.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_2` (Drift: 0.0 IQR)
- **Magnitude:** 545.1 | **LOC:** 832 | **CtrlFlow:** 17.0% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (44.0505%), Tech Debt (85.0577%)
**Top Internal Functions/Classes:**
  * `loadColumnSchema` **(Compute Cores)** (Impact: 32.6)
  * `loadTableConstraints` **(Compute Cores)** (Impact: 29.3)
  * `findColumns` **(Defensive Guards)** (Impact: 16.1)
  * `insert` **(Defensive Guards)** (Impact: 15.3)
    * *Intent:* /** * Loads multiple types of constraints and returns the specified ones. * @param string $tableName...
  * `resolveTableNames` **(Compute Cores)** (Impact: 11.7)
    * *Intent:* // does nothing as MSSQL does not support this
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 102 instances
* *Api Near Db Sink:* 1 instances
* *State Mutation (weighted view):* 341
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 78`, `structural_boundaries: 94`, `args: 29`, `func_start: 28`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 137`, `unreferenced_by_name: 19`
* *Architecture:* `api: 11`, `import: 13`
* *Defense:* `safety: 12`, `doc: 35`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.523
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 10):` ConstraintFinderTrait, ViewFinderTrait, Yii, yii\db\CheckConstraint, yii\db\Constraint, yii\db\ConstraintFinderInterface, yii\db\ConstraintFinderTrait, yii\db\DefaultValueConstraint...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `framework/db/mssql/QueryBuilder.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_0` (Drift: 0.0 IQR)
- **Magnitude:** 537.32 | **LOC:** 692 | **CtrlFlow:** 18.1% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (33.6534%), Tech Debt (89.3959%)
**Top Internal Functions/Classes:**
  * `insert` **(Many-Argument Workhorses)** (Impact: 34.4)
    * *Intent:* /** * {@inheritdoc} * Added OUTPUT construction for getting inserted data (for SQL Server 2005 or la...
  * `upsert` **(Many-Argument Workhorses)** (Impact: 32.5)
    * *Intent:* /** * {@inheritdoc} * @see https://docs.microsoft.com/en-us/sql/t-sql/statements/merge-transact-sql ...
  * `oldBuildOrderByAndLimit` **(Many-Argument Workhorses)** (Impact: 19.1)
    * *Intent:* /** * Builds the ORDER BY/LIMIT/OFFSET clauses for SQL SERVER 2005 to 2008. * @param string $sql the...
  * `alterColumn` **(Many-Argument Workhorses)** (Impact: 15.9)
    * *Intent:* /** * Builds a SQL statement for changing the definition of a column. * @param string $table the tab...
  * `normalizeTableRowData` **(Defensive Guards)** (Impact: 14.8)
    * *Intent:* /** * Normalizes data to be saved into the table, performing extra preparations and type converting,...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 88 instances
* *State Mutation (weighted view):* 283
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 76`, `structural_boundaries: 87`, `args: 30`, `func_start: 28`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 29`, `state_mutation: 107`, `unreferenced_by_name: 19`
* *Architecture:* `api: 19`, `import: 5`
* *Defense:* `safety: 10`, `doc: 35`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.523
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 4):` d when FETCH and OFFSET are in the SQL
            $orderBy = 'ORDER BY (SELECT NULL)', s an ORDER BY clause
            $orderBy = 'ORDER BY (SELECT NULL)', yii\base\InvalidArgumentException, yii\base\NotSupportedException, yii\db\Expression, yii\db\Query, yii\db\TableSchema
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `framework/db/Command.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_2` (Drift: 0.0 IQR)
- **Magnitude:** 529.36 | **LOC:** 1348 | **CtrlFlow:** 12.7% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (44.8229%), Tech Debt (99.9915%)
**Top Internal Functions/Classes:**
  * `getRawSql` **(Defensive Guards)** (Impact: 18.6)
    * *Intent:* /** * Returns the raw SQL by inserting parameter values into the corresponding placeholders in [[sql...
  * `queryInternal` **(Defensive Guards)** (Impact: 18.0)
    * *Intent:* /** * Performs the actual DB query of a SQL statement. * @param string $method method of PDOStatemen...
  * `internalExecute` **(Defensive Guards)** (Impact: 15.4)
    * *Intent:* /** * Executes a prepared statement. * * It's a wrapper around [[\PDOStatement::execute()]] to suppo...
  * `prepare` **(Defensive Guards)** (Impact: 14.4)
    * *Intent:* /** * Prepares the SQL statement to be executed. * For complex SQL statement that is to be executed ...
  * `bindValues` **(Defensive Guards)** (Impact: 14.2)
    * *Intent:* /** * Binds a list of values to the corresponding parameters. * This is similar to [[bindValue()]] e...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 56 instances
* *State Mutation (weighted view):* 242
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 66`, `structural_boundaries: 145`, `args: 64`, `func_start: 61`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 130`, `dead_code: 1`, `planned_debt: 1`, `unreferenced_by_name: 40`
* *Architecture:* `io: 2`, `api: 57`, `import: 3`
* *Defense:* `safety: 29`, `doc: 75`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.523
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 3):` $columns, $table, $unique, $unique = false)
    
        $sql = $this->db->getQueryBuilder()->createIndex($name, $value[0], $value[1], TableSchemaRefresh($name)
    
        $this->_refreshTableName = $name, TableSchemaRefresh($table...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `framework/widgets/ActiveField.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_2` (Drift: 0.0 IQR)
- **Magnitude:** 529.08 | **LOC:** 972 | **CtrlFlow:** 20.8% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (35.3233%), Tech Debt (61.8525%)
**Top Internal Functions/Classes:**
  * `getClientOptions` **(Defensive Guards)** (Impact: 27.6)
    * *Intent:* /** * Returns the JS options for the field. * @return array the JS options. */
  * `radio` **(Defensive Guards)** (Impact: 13.4)
    * *Intent:* * When this option is specified, the radio button will be enclosed by a label tag. If you do not wan...
  * `checkbox` **(Defensive Guards)** (Impact: 13.4)
    * *Intent:* * When this option is specified, the checkbox will be enclosed by a label tag. If you do not want an...
  * `widget` **(Defensive Guards)** (Impact: 11.8)
    * *Intent:* * * ``` * $form->field($model, 'date')->widget(\yii\widgets\MaskedInput::class, [ * 'mask' => '99/99...
  * `render` **(Defensive Guards)** (Impact: 11.0)
    * *Intent:* * assemble them into HTML according to [[template]]. * @param string|callable|null $content the cont...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 90 instances
* *State Mutation (weighted view):* 302
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 87`, `structural_boundaries: 85`, `args: 29`, `func_start: 28`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 122`, `dead_code: 2`, `unreferenced_by_name: 12`
* *Architecture:* `api: 38`, `import: 7`
* *Defense:* `safety: 31`, `doc: 52`, `cleanup: 2`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.572
  * `Choke Point (Betweenness):` 4e-06 | `Ripple Effect (Closeness):` 0.00098
  * `Imports (Out-Degree: 6):` Yii, `input`, `label` and `error`.
     * Note that you normally don't need to access this property directly, d']) && $this->model->isAttributeRequired($attributeName)) 
                $options['aria-required'] = 'true', dCssClass, 
    public $addAriaAttributes = true, yii\base\Component, yii\base\ErrorHandler...
  * `Imported By (In-Degree: 1):` (Excluded from Brief to save tokens)

## 13. ARCHITECTURAL DRIFT ANOMALIES & ANTI-PATTERNS
> **AI CONTEXT:** Pay close attention to 'Anti-Pattern' files. These files blend in globally (Low Global Drift), but heavily violate the standard conventions of their native programming language (High Local Drift). 'Mixed-Responsibility' files sit perfectly between two global archetypes (Delta <= 0.9 IQR), indicating a violation of the Single Responsibility Principle.

*No highly conflicted/drifting files detected within the 0.9 IQR threshold.*

## 13.5 STRATEGIC REFACTORING TARGETS (Volatility & Authorship Centralization)
> **AI CONTEXT:** Use these intersections to recommend pragmatic next steps. Risk is exponentially worse when combined with high churn (frequent edits) or high authorship centralization (single points of failure).

### 🔥 The Hotspot Matrix (High Volatility + High Risk)
These files are messy, complex, and modified frequently. They are the primary source of developer friction.

- `framework/console/Controller.php` -> Churn: **95.03%** | Cog Load: 47.8185% | Debt: 83.69%
- `framework/web/Controller.php` -> Churn: **94.99%** | Cog Load: 47.342% | Debt: 80.7708%
- `framework/base/Application.php` -> Churn: **84.55%** | Cog Load: 32.8461% | Debt: 95.1742%
- `framework/console/controllers/BaseMigrateController.php` -> Churn: **80.44%** | Cog Load: 38.1639% | Debt: 57.7924%
- `framework/console/controllers/MigrateController.php` -> Churn: **80.44%** | Cog Load: 35.8876% | Debt: 60.2685%

### 👤 Key Person Dependencies (High Impact + Siloed Knowledge)
These are massive, load-bearing files written almost entirely by a single developer. They represent severe 'Bus Factor' risk.

- `framework/helpers/BaseHtml.php` -> **Maksim Spirkov** (100.0% isolated ownership) | Magnitude: 1675.38
- `framework/helpers/BaseFileHelper.php` -> **Alexander Makarov** (100.0% isolated ownership) | Magnitude: 867.0
- `tests/framework/db/ActiveRecordTest.php` -> **Wilmer Arambula** (100.0% isolated ownership) | Magnitude: 851.22
- `framework/helpers/BaseConsole.php` -> **Alexander Makarov** (100.0% isolated ownership) | Magnitude: 788.16
- `framework/helpers/BaseArrayHelper.php` -> **Maksim Spirkov** (100.0% isolated ownership) | Magnitude: 729.6

## 13.8 SYSTEMIC NETWORK BOTTLENECKS (N-Dimensional Topology)
> **AI CONTEXT:** These metrics cross-multiply Network Graph Theory against Risk Exposure to identify the exact mechanisms of runtime failure.

### ☣️ Cascading State Flux (Betweenness * State Flux)
These files act as structural bridges between components, but possess highly volatile, mutating state. They cause unpredictable side-effects for all downstream consumers.

- `framework/base/Model.php` -> **Severity: 0.057** (Bridge: 0.0006 * Flux: 100.0%)
- `framework/db/Connection.php` -> **Severity: 0.04** (Bridge: 0.0004 * Flux: 100.0%)
- `framework/db/Query.php` -> **Severity: 0.033** (Bridge: 0.0003 * Flux: 100.0%)
- `framework/db/Migration.php` -> **Severity: 0.03** (Bridge: 0.0003 * Flux: 99.9369%)
- `framework/base/Component.php` -> **Severity: 0.028** (Bridge: 0.0003 * Flux: 99.9998%)

### 🃏 House of Cards (Closeness * Error Risk)
These files are deeply embedded (1 or 2 hops from the entire codebase) but possess high error exposure. A runtime exception here will cascade instantly across the application.

- `framework/Yii.php` -> **Severity: 20.568** (Embedded: 0.333 * Error Risk: 61.7748%)
- `tests/TestCase.php` -> **Severity: 16.196** (Embedded: 0.1708 * Error Risk: 94.8089%)
- `framework/base/Component.php` -> **Severity: 11.997** (Embedded: 0.148 * Error Risk: 81.0793%)
- `framework/base/BaseObject.php` -> **Severity: 6.356** (Embedded: 0.0789 * Error Risk: 80.5402%)
- `framework/db/Connection.php` -> **Severity: 6.186** (Embedded: 0.069 * Error Risk: 89.6475%)

### 🙈 Opaque Critical Nodes (Dependency Blast Radius * Doc Risk)
These are 'Core Architecture Nodes' that the entire ecosystem relies upon, but they lack human intent, documentation, or ownership metadata. Modifying them is flying blind.

- `framework/db/Query.php` -> **Severity: 319.3** (Blast Radius: 7.416 * Doc Risk: 43.0556%)
- `tests/data/validators/models/FakedValidationModel.php` -> **Severity: 195.464** (Blast Radius: 2.389 * Doc Risk: 81.8182%)
- `tests/framework/web/session/AbstractDbSessionTest.php` -> **Severity: 153.926** (Blast Radius: 2.078 * Doc Risk: 74.0741%)
- `tests/framework/db/DatabaseTestCase.php` -> **Severity: 135.488** (Blast Radius: 3.613 * Doc Risk: 37.5%)
- `tests/TestCase.php` -> **Severity: 117.056** (Blast Radius: 25.752 * Doc Risk: 4.5455%)

## AI SYSTEM INSTRUCTIONS (OUTPUT FORMAT)
> **CRITICAL TONE DIRECTIVE:** Stay in the Senior Technical Storyteller persona from Section 1. Use grounded, professional software engineering terminology (e.g., coupling, cohesion, technical debt, single responsibility) woven into a cohesive narrative -- not a dry, disconnected bullet-point audit. DO NOT use sci-fi, dramatic, or sensational jargon (e.g., 'Trojan', 'violently violates', 'parasitic', 'chimeric'). Be objective and factual, but write like you're explaining the codebase to a colleague, not filing a verdict.
> **When the user asks for an architectural review, structure your response using these directives:**
> 1. **Information Flow & Purpose (The Executive Summary):** Synthesize the overarching purpose of the codebase. Trace the information flow by analyzing the Top Dependencies ('Imports' and 'Imported By') and the Language Composition. Explain how the system's archetype drives its design, but only mention Z-Score deviations if they are highly abnormal.
> 2. **Notable Structures & Architecture:** Discuss the architecture based on the Dependency Graph. Identify the foundational load-bearers (highest inbound connections) versus the fragile orchestrators (highest outbound imports).
> 3. **Security & Vulnerabilities:** Immediately surface any critical threats flagged in the `AI THREAT INTELLIGENCE (XGBoost)` section. If none exist, briefly confirm the repository is secure from recognized structural threats.
> 4. **Outliers & Extremes:** Focus strictly on statistical anomalies. Highlight files or directory groups with massive Cumulative Risk, severe Z-Scores (Architectural Drift), or extreme spikes in individual risk vectors (like State Flux or Cognitive Load). Ignore normal, healthy code.
> 5. **Recommended Next Steps (Refactoring for Stability):** Provide 2-3 highly specific, pragmatic suggestions focused strictly on reducing outliers. Instruct the user on how to refactor high Z-score files, decouple massive central nodes, or mitigate extreme risk exposures to stabilize the system's architecture.
